Update Fedora to 37, added efi and version

--- a/grub2/inc-fedora.cfg
+++ b/grub2/inc-fedora.cfg
@@ -7,13 +7,24 @@ for isofile in $isopath/fedora/Fedora-*.iso; do
     --set 3:arch \
     --set 4:version \
     "^${isopath}/fedora/(Fedora-([^-]+)-Live-([^-]+)-([^-]+)-[^-]+\.iso)\$" "${isofile}"
-  menuentry "Fedora ${version} ${arch} ${variant}" "${isofile}" "${isoname}" --class fedora {
+  menuentry "Fedora ${version} ${arch} ${variant}" "${isofile}" "${isoname}" "${version}" --class fedora {
     set isofile=$2
     set isoname=$3
+    set version=$4
+    if [ "${grub_platform}" = "efi" ]; then
+      linuxlaunch='efi'
+    else
+      linuxlaunch=''
+    fi
     echo "Using ${isoname}..."
     loopback loop $isofile
     probe --set isolabel --label (loop)
-    linux (loop)/isolinux/vmlinuz root=live:CDLABEL=${isolabel} rd.live.image iso-scan/filename=${isofile}
-    initrd (loop)/isolinux/initrd.img
+    if [ ${version} -ge 37 ]; then
+      linux${linuxlaunch} (loop)/images/pxeboot/vmlinuz root=live:CDLABEL=${isolabel} rd.live.image iso-scan/filename=${isofile}
+      initrd${linuxlaunch} (loop)/images/pxeboot/initrd.img
+    else
+      linux (loop)/isolinux/vmlinuz root=live:CDLABEL=${isolabel} rd.live.image iso-scan/filename=${isofile}
+      initrd (loop)/isolinux/initrd.img
+    fi
   }
 done
